<resources>
    <string name="app_name">SignUpForm2</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="confirm">Confirm Password:</string>
    <string name="username_prompt">Please enter your username</string>
    <string name="password_prompt">Please enter your password</string>
    <string name="confirm_prompt">Please enter your confirm</string>
    <string name="submit">Submit</string>
</resources>
